# pyftg

./: .gitignore  LICENSE  README.md  pbgen.bat  pyproject.toml  setup.py
examples/: Collector.py  DisplayInfo.py  KickAI.py  Main_Observe.py  Main_OpenCV.py  Main_PyAIvsPyAI.py  Main_PyAIvsPyAI_Socket.py  Main_SinglePyAI.py  Main_SinglePyAI_Socket.py  Main_SoundAI.py  OneSecondAI.py  README.md  TestSoundAI.py  requirements.txt
protos/: enum.proto  message.proto  service.proto
src/pyftg/: __init__.py  ai_controller.py  ai_interface.py  gateway.py  observer_gateway.py  observer_handler.py  util.py
src/pyftg/aiinterface/: __init__.py  ai_controller.py  ai_interface.py  command_center.py  sound_ai_interface.py  soundgenai_interface.py  stream_interface.py
src/pyftg/aio/: ai_controller.py  gateway.py
src/pyftg/asyncio/: ai_controller.py  gateway.py
src/pyftg/enum/: __init__.py  action.py  data_flag.py  flag.py  state.py  status_code.py
src/pyftg/interfaces/: async_gateway.py
src/pyftg/models/: attack_data.py  audio_data.py  base_model.py  character_data.py  fft_data.py  frame_data.py  game_data.py  hit_area.py  key.py  round_result.py  screen_data.py
src/pyftg/protoc/: enum_pb2.py  message_pb2.py  service_pb2.py  service_pb2_grpc.py
src/pyftg/socket/: ai_controller.py  gateway.py
src/pyftg/struct/: __init__.py  attack_data.py  audio_data.py  character_data.py  command_center.py  fft_data.py  frame_data.py  game_data.py  hit_area.py  key.py  round_result.py  screen_data.py
src/pyftg/threading/: gateway.py  observer_gateway.py
src/pyftg/types/: grpc.py
(+32 files in other folders)
